2009-06-10  Manuel Cerón  <ceronman@gmail.com>

	* TextTool.cs: Added new base class for the Tools

	* SimpleTextTool.cs: Now inherits from TextTool

	* MultiLineTextTool.cs: Now inherits from TextTool. Uses
	UndoActivity now

2009-06-10  Manuel Cerón  <ceronman@gmail.com>

	* CreationTool.cs: PushesUndoActivity on MouseUp

	* UndoableTool.cs: Removed. Using PushUndoActivity in
	AbstractTool instead

	* SelectionTool.cs: Don't use UndoableTool anymore and don't
	deactivate the tool at MouseUp

	* FigureTool.cs: Removed UndoActivity override, not needed
	anymore since UndoableTool is gone

	* SimpleTextTool.cs: Added Undo behavior

	* ITool.cs: Added Undoable property

	* DragTool.cs: UpdateUndoActivity creation in MouseUp instead
	Deactivate

	* AbstractTool.cs: Added PushUndoActivity and Undoable

2009-06-06  Manuel Cerón  <ceronman@gmail.com>

	* CreationTool.cs: Added UndoActivity

2009-06-06  Manuel Cerón  <ceronman@gmail.com>

	* SelectionTool.cs: Using UndoableHandle when using a Handle

2009-06-04  Manuel Cerón  <ceronman@gmail.com>

	* FigureTool.cs: Using automatic properties. Added Activate,
	Deactivate, and UndoActivity Implementations

	* DragTool.cs: Using Automatic Properties. Added UndoActivity

	* SelectionTool.cs: Using UndoableTool for DragTracker and
	FigureTool

2009-06-04  Manuel Cerón  <ceronman@gmail.com>

	* UndoableTool.cs: Fixed constructor syntax error

2009-06-04  Manuel Cerón  <ceronman@gmail.com>

	* DragTool.cs: Renamed to DragTool

2009-06-04  Manuel Cerón  <ceronman@gmail.com>

	* DragTool.cs:
	* DragTracker.cs:
	* SelectionTool.cs: DragTracker renamed to DragTool

2009-06-03  Manuel Cerón  <ceronman@gmail.com>

	* UndoableTool.cs: Added UndoableTool

2009-06-03  Manuel Cerón  <ceronman@gmail.com>

	* ITool.cs: Added UndoActivity property.

	* AbstractTool.cs: Added UndoActivity Property. Some
	properties migrated to automatic properties.
